--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,4 +3,5 @@ execution_env=Local
 appURL=https://tutorialsninja.com/demo/
 email=komalkalkutkar2611@gmail.com
 password = komal123
-searchProductName=iPhone
+searchProductName1=HP LP3065
+//searchProductName2=MacBook
